--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,30 @@
     "from keras_preprocessing.sequence import pad_sequences\n",
     "from keras.layers import Input, LSTM, Embedding, Dense, Concatenate, TimeDistributed\n",
     "from keras.models import Model\n",
-    "from keras.callbacks import EarlyStopping"
+    "from keras.callbacks import EarlyStopping\n",
+    "from matplotlib import pyplot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -147,28 +165,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metal device set to: Apple M2\n",
+      "WARNING:tensorflow:Layer lstm will not use cuDNN kernels since it doesn't meet the criteria. It will use a generic GPU kernel as fallback when running on GPU.\n",
+      "WARNING:tensorflow:Layer lstm_1 will not use cuDNN kernels since it doesn't meet the criteria. It will use a generic GPU kernel as fallback when running on GPU.\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-24 20:20:09.251982: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
-      "2023-02-24 20:20:09.252504: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+      "2023-02-24 21:11:34.787903: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2023-02-24 21:11:34.788325: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Metal device set to: Apple M2\n",
-      "\n",
-      "systemMemory: 16.00 GB\n",
-      "maxCacheSize: 5.33 GB\n",
-      "\n",
-      "WARNING:tensorflow:Layer lstm will not use cuDNN kernels since it doesn't meet the criteria. It will use a generic GPU kernel as fallback when running on GPU.\n",
-      "WARNING:tensorflow:Layer lstm_1 will not use cuDNN kernels since it doesn't meet the criteria. It will use a generic GPU kernel as fallback when running on GPU.\n",
       "WARNING:tensorflow:Layer lstm_2 will not use cuDNN kernels since it doesn't meet the criteria. It will use a generic GPU kernel as fallback when running on GPU.\n",
       "WARNING:tensorflow:Layer lstm_3 will not use cuDNN kernels since it doesn't meet the criteria. It will use a generic GPU kernel as fallback when running on GPU.\n",
       "Model: \"model\"\n",
@@ -262,11 +282,194 @@
     "\n",
     "model.summary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer='rmsprop', loss='sparse_categorical_crossentropy')\n",
+    "\n",
+    "es = EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-02-24 21:11:42.787610: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n",
+      "2023-02-24 21:11:45.637166: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = model.fit(\n",
+    "    [x_tr, y_tr[:, :-1]],\n",
+    "    y_tr.reshape(y_tr.shape[0], y_tr.shape[1], 1)[:, 1:],\n",
+    "    epochs=50,\n",
+    "    callbacks=[es],\n",
+    "    batch_size=128,\n",
+    "    validation_data=([x_val, y_val[:, :-1]],\n",
+    "                    y_val.reshape(y_val.shape[0], y_val.shape[1], 1)[:\n",
+    "                    , 1:]),\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyplot.plot(history.history['loss'], label='train')\n",
+    "pyplot.plot(history.history['val_loss'], label='test')\n",
+    "pyplot.legend()\n",
+    "pyplot.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reverse_target_word_index = y_tokenizer.index_word\n",
+    "reverse_source_word_index = x_tokenizer.index_word\n",
+    "target_word_index = y_tokenizer.word_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inference Models\n",
+    "\n",
+    "# Encode the input sequence to get the feature vector\n",
+    "encoder_model = Model(inputs=encoder_inputs, outputs=[encoder_outputs,\n",
+    "                      state_h, state_c])\n",
+    "\n",
+    "# Decoder setup\n",
+    "\n",
+    "# Below tensors will hold the states of the previous time step\n",
+    "decoder_state_input_h = Input(shape=(latent_dim, ))\n",
+    "decoder_state_input_c = Input(shape=(latent_dim, ))\n",
+    "decoder_hidden_state_input = Input(shape=(max_text_len, latent_dim))\n",
+    "\n",
+    "# Get the embeddings of the decoder sequence\n",
+    "dec_emb2 = dec_emb_layer(decoder_inputs)\n",
+    "\n",
+    "# To predict the next word in the sequence, set the initial states to the states from the previous time step\n",
+    "(decoder_outputs2, state_h2, state_c2) = decoder_lstm(dec_emb2,\n",
+    "        initial_state=[decoder_state_input_h, decoder_state_input_c])\n",
+    "\n",
+    "# A dense softmax layer to generate prob dist. over the target vocabulary\n",
+    "decoder_outputs2 = decoder_dense(decoder_outputs2)\n",
+    "\n",
+    "# Final decoder model\n",
+    "decoder_model = Model([decoder_inputs] + [decoder_hidden_state_input,\n",
+    "                      decoder_state_input_h, decoder_state_input_c],\n",
+    "                      [decoder_outputs2] + [state_h2, state_c2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decode_sequence(input_seq):\n",
+    "\n",
+    "    # Encode the input as state vectors.\n",
+    "    (e_out, e_h, e_c) = encoder_model.predict(input_seq)\n",
+    "\n",
+    "    # Generate empty target sequence of length 1\n",
+    "    target_seq = np.zeros((1, 1))\n",
+    "\n",
+    "    # Populate the first word of target sequence with the start word.\n",
+    "    target_seq[0, 0] = target_word_index['sostok']\n",
+    "\n",
+    "    stop_condition = False\n",
+    "    decoded_sentence = ''\n",
+    "\n",
+    "    while not stop_condition:\n",
+    "        (output_tokens, h, c) = decoder_model.predict([target_seq]\n",
+    "                + [e_out, e_h, e_c])\n",
+    "\n",
+    "        # Sample a token\n",
+    "        sampled_token_index = np.argmax(output_tokens[0, -1, :])\n",
+    "        sampled_token = reverse_target_word_index[sampled_token_index]\n",
+    "\n",
+    "        if sampled_token != 'eostok':\n",
+    "            decoded_sentence += ' ' + sampled_token\n",
+    "\n",
+    "        # Exit condition: either hit max length or find the stop word.\n",
+    "        if sampled_token == 'eostok' or len(decoded_sentence.split()) \\\n",
+    "            >= max_summary_len - 1:\n",
+    "            stop_condition = True\n",
+    "\n",
+    "        # Update the target sequence (of length 1)\n",
+    "        target_seq = np.zeros((1, 1))\n",
+    "        target_seq[0, 0] = sampled_token_index\n",
+    "\n",
+    "        # Update internal states\n",
+    "        (e_h, e_c) = (h, c)\n",
+    "\n",
+    "    return decoded_sentence\n",
+    "\n",
+    "# To convert sequence to summary\n",
+    "def seq2summary(input_seq):\n",
+    "    newString = ''\n",
+    "    for i in input_seq:\n",
+    "        if i != 0 and i != target_word_index['sostok'] and i \\\n",
+    "            != target_word_index['eostok']:\n",
+    "            newString = newString + reverse_target_word_index[i] + ' '\n",
+    "\n",
+    "    return newString\n",
+    "\n",
+    "\n",
+    "# To convert sequence to text\n",
+    "def seq2text(input_seq):\n",
+    "    newString = ''\n",
+    "    for i in input_seq:\n",
+    "        if i != 0:\n",
+    "            newString = newString + reverse_source_word_index[i] + ' '\n",
+    "\n",
+    "    return newString"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(0, 19):\n",
+    "    print ('Review:', seq2text(x_tr[i]))\n",
+    "    print ('Original summary:', seq2summary(y_tr[i]))\n",
+    "    print ('Predicted summary:', decode_sequence(x_tr[i].reshape(1,\n",
+    "           max_text_len)))\n",
+    "    print '\\n'"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -282,7 +485,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.9"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "d7a281e14c53cc8135e12e4aab9fde2b44b9f1f92c1da945940f35aaade22c8b"
