Cleaned the script

--- a/model.ipynb
+++ b/model.ipynb
@@ -20,23 +20,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"hello\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -463,7 +446,7 @@
     "    print ('Original summary:', seq2summary(y_tr[i]))\n",
     "    print ('Predicted summary:', decode_sequence(x_tr[i].reshape(1,\n",
     "           max_text_len)))\n",
-    "    print '\\n'"
+    "    print('\\n')"
    ]
   }
  ],
